Fix styles for incident page layout on mobile
This block should have been wrapped in a media
query, to only target smaller screens, in [the
original
commit](https://github.com/alphagov/statuspage-customisations/pull/16/commits/538bdd4f072b71ca2f1e2b874c8daf4a3a6bcfba)

--- a/custom.css
+++ b/custom.css
@@ -247,11 +247,13 @@ h2.page-status__heading {
 }
 
 /* make incident page content linear on mobile */
-.layout-content.status.status-incident .update-title,
-.layout-content.status.status-incident .update-container {
-  float: none;
-}
+@media screen and (max-width: 450px) {
+  .layout-content.status.status-incident .update-title,
+  .layout-content.status.status-incident .update-container {
+    float: none;
+  }
 
-.layout-content.status.status-incident  .update-container:not(.span12) {
-  width: auto;
+  .layout-content.status.status-incident  .update-container:not(.span12) {
+    width: auto;
+  }
 }
